<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>network.nerve</groupId>
  <artifactId>heterogeneous-tool</artifactId>
  <version>1.0.12-android-SNAPSHOT</version>

  <name>heterogeneous-tool</name>

  <!--<parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>
  <scm>
    <tag>1.0.8-android-BETA</tag>
    <url>https://github.com/NerveNetwork/heterogeneous-tool</url>
    <connection>https://github.com/NerveNetwork/heterogeneous-tool.git</connection>
    <developerConnection>https://nerve.network</developerConnection>
  </scm>
  <developers>
    <developer>
      <name>PierreLuo</name>
      <email>luohao@nuls.io</email>
      <organization>NerveNetwork</organization>
    </developer>
  </developers>

  <distributionManagement>
    <snapshotRepository>
      &lt;!&ndash; 这个id需要在setting.xml中设置  &ndash;&gt;
      <id>nerve</id>
      <name>OSS Snapshots Repository</name>
      &lt;!&ndash; 这里的url就是Issue中回复的snapshots 的repo地址&ndash;&gt;
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>nerve</id>
      <name>OSS Staging Repository</name>
      &lt;!&ndash; 这里的url就是Issue中回复的staging 的repo地址&ndash;&gt;
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
    </repository>
  </distributionManagement>-->

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
    <java.version>1.8</java.version>
    <slf4j.version>1.7.26</slf4j.version>
    <logback.version>1.2.3</logback.version>
    <bcprov-jdk15on.version>1.62</bcprov-jdk15on.version>
  </properties>

  <repositories>
    <repository>
      <id>eth</id>
      <name>eth-rep</name>
      <url>https://dl.bintray.com/ethereum/maven/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <!-- Logger -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-access</artifactId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>

    <!-- eth -->
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk15on</artifactId>
      <version>${bcprov-jdk15on.version}</version>
    </dependency>

<!--    <dependency>-->
<!--      <groupId>org.web3j</groupId>-->
<!--      <artifactId>core</artifactId>-->
<!--      <version>4.6.3</version>-->
<!--      <exclusions>-->
<!--        <exclusion>-->
<!--          <artifactId>bcprov-jdk15on</artifactId>-->
<!--          <groupId>org.bouncycastle</groupId>-->
<!--        </exclusion>-->
<!--      </exclusions>-->
<!--    </dependency>-->

    <!-- android -->
    <dependency>
      <groupId>org.web3j</groupId>
      <artifactId>core</artifactId>
      <version>4.6.0-android</version>
    </dependency>


    <dependency>
      <groupId>org.ethereum</groupId>
      <artifactId>ethereumj-core</artifactId>
      <version>1.7.2-RELEASE</version>
      <exclusions>
        <exclusion>
          <artifactId>leveldb</artifactId>
          <groupId>org.iq80.leveldb</groupId>
        </exclusion>
        <exclusion>
          <artifactId>leveldbjni-all</artifactId>
          <groupId>org.ethereum</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.javassist</groupId>
      <artifactId>javassist</artifactId>
      <version>3.21.0-GA</version>
    </dependency>

    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>4.5.6</version>
    </dependency>

  </dependencies>

<!--  <profiles>
    <profile>
      <id>disable-javadoc-doclint</id>
      <activation>
        <jdk>[1.8,)</jdk>
      </activation>
      &lt;!&ndash; java8版本导致javadoc打包编译失败时候，添加&ndash;&gt;
      <properties>
        <javadoc.opts>-Xdoclint:none</javadoc.opts>
      </properties>
    </profile>

    <profile>
      <id>release</id>
      <build>
        <plugins>

          &lt;!&ndash;<plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>1.6.8</version>
            <extensions>true</extensions>
            <configuration>
              <serverId>nerve</serverId>
              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
              <autoReleaseAfterClose>false</autoReleaseAfterClose>
            </configuration>
          </plugin>&ndash;&gt;
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-release-plugin</artifactId>
            <version>2.3.2</version>
            <configuration>
              <autoVersionSubmodules>true</autoVersionSubmodules>
              <useReleaseProfile>false</useReleaseProfile>
              <releaseProfiles>release</releaseProfiles>
              <goals>deploy</goals>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.0</version>
            <configuration>
              <source>1.8</source>
              <target>1.8</target>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>2.2.1</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>2.10.4</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <phase>package</phase>
                <goals>
                  <goal>jar</goal>
                </goals>
                &lt;!&ndash; java8版本导致javadoc打包编译失败时候，添加&ndash;&gt;
                <configuration>
                  <additionalparam>${javadoc.opts}</additionalparam>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>-->

  <build>
    <finalName>heterogeneous-tool</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <distributionManagement>
    <repository>
      <id>maven-releases</id>
      <url>http://nexus.nuls.center/nexus/content/repositories/releases/</url>
    </repository>
    <snapshotRepository>
      <id>maven-snapshots</id>
      <url>http://nexus.nuls.center/nexus/content/repositories/snapshots/</url>
    </snapshotRepository>
  </distributionManagement>
</project>
